--- a/audience-app/package.json
+++ b/audience-app/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "expo": "~48.0.6",
+    "expo": "^48.0.10",
     "expo-crypto": "~12.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
     "react-native-web": "~0.18.10",
+    "reconnecting-websocket": "^4.4.0",
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
