--- a/audience-app/app.json
+++ b/audience-app/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "audience-app",
-    "slug": "audience-app",
+    "name": "Plexusplay Voting",
+    "slug": "Plexusplay Voting",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/plexusplay.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -19,12 +19,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/plexusplay.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/plexusplay.png"
     }
   }
 }
