--- a/audience-app/package.json
+++ b/audience-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "audience-app",
+  "name": "plexusplay-voting",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
