--- a/audience-app/package.json
+++ b/audience-app/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.71.6",
     "react-native-web": "~0.18.10",
     "reconnecting-websocket": "^4.4.0",
-    "unique-names-generator": "^4.7.1"
+    "unique-names-generator": "^4.7.1",
+    "expo-font": "~11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
