--- a/audience-app/package.json
+++ b/audience-app/package.json
@@ -13,14 +13,15 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "^48.0.10",
     "expo-crypto": "~12.2.1",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-svg": "^13.9.0",
     "react-native-web": "~0.18.10",
     "reconnecting-websocket": "^4.4.0",
-    "unique-names-generator": "^4.7.1",
-    "expo-font": "~11.1.1"
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
