--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,8 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = "1.12.0"
-async-tungstenite = "0.22.2"
-futures = "0.3.28"
+env_logger = "0.10.0"
+futures-channel = "0.3.28"
+futures-util = "0.3.28"
+log = { version = "0.4.19", features = ["serde"] }
 serde = { version = "1.0.164", features = ["derive"]}
 serde_json = "1.0.99"
+time = { version = "0.3", features = ["macros", "serde"] }
+tokio = { version = "1.29.1", features = ["tokio-macros", "full"] }
+tokio-tungstenite = "0.19.0"
+tungstenite = "0.19.0"
