--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,14 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dashmap = "5.5.0"
 env_logger = "0.10.0"
-futures-channel = "0.3.28"
 futures-util = "0.3.28"
-log = { version = "0.4.19", features = ["serde"] }
-serde = { version = "1.0.164", features = ["derive"]}
-serde_json = "1.0.99"
-time = { version = "0.3", features = ["macros", "serde"] }
-tokio = { version = "1.29.1", features = ["tokio-macros", "full"] }
-tokio-tungstenite = "0.19.0"
-tungstenite = "0.19.0"
+log = "0.4.20"
+serde = { version = "1.0.183", features = ["serde_derive"] }
+serde_json = "1.0.105"
+time = { version = "0.3.25", features = ["serde"] }
+tokio = { version = "1.32.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
+tokio-stream = "0.1.14"
+warp = "0.3.5"
