--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 env_logger = "0.10.0"
+futures = "0.3.28"
 futures-util = "0.3.28"
 log = "0.4.20"
 serde = { version = "1.0.183", features = ["serde_derive"] }
