--- a/audience-app/package.json
+++ b/audience-app/package.json
@@ -9,17 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "expo": "^48.0.10",
-    "expo-crypto": "~12.2.1",
-    "expo-font": "~11.1.1",
-    "expo-status-bar": "~1.4.4",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "expo": "^49.0.23",
+    "expo-crypto": "~12.4.1",
+    "expo-font": "~11.4.0",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.6",
-    "react-native-svg": "^13.9.0",
-    "react-native-web": "~0.18.10",
+    "react-native": "0.72.10",
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6",
     "reconnecting-websocket": "^4.4.0",
     "unique-names-generator": "^4.7.1"
   },
