--- a/audience-app/package.json
+++ b/audience-app/package.json
@@ -6,19 +6,20 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "expo export --platform web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@expo/metro-runtime": "^3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "expo": "^50.0.17",
     "expo-crypto": "~12.8.1",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.0",
-    "react-native-svg": "15.2.0",
+    "react-native": "0.73.6",
+    "react-native-svg": "14.1.0",
     "react-native-web": "^0.19.11",
     "reconnecting-websocket": "^4.4.0",
     "unique-names-generator": "^4.7.1"
