--- a/audience-app/app.json
+++ b/audience-app/app.json
@@ -26,6 +26,9 @@
     "web": {
       "bundler": "metro",
       "favicon": "./assets/plexusplay.png"
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
