--- a/audience-app/package.json
+++ b/audience-app/package.json
@@ -10,16 +10,16 @@
     "build": "expo export --platform web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "^3.2",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "expo": "^52.0.7",
-    "expo-crypto": "~12.8.1",
-    "expo-font": "~11.10.3",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-svg": "14.1.0",
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo": "~52.0.11",
+    "expo-crypto": "~14.0.1",
+    "expo-font": "~13.0.1",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-svg": "15.8.0",
     "react-native-web": "^0.19.11",
     "reconnecting-websocket": "^4.4.0",
     "unique-names-generator": "^4.7.1"
